[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ZoomSetting.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Options_Screen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/FullscreenToggle.gd" type="Script" id=4]

[node name="Options_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="CurrentZoom" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 498.0
margin_top = 233.0
margin_right = 698.0
margin_bottom = 275.0
text = "CURRENT ZOOM:"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 528.0
margin_top = 210.0
margin_right = 670.0
margin_bottom = 224.0
text = "CHANGE CAMERA SIZE"

[node name="Zoom1Button" type="ToolButton" parent="CanvasLayer"]
margin_left = 395.0
margin_top = 299.0
margin_right = 535.0
margin_bottom = 371.0
text = "Zoom 1X"
icon = ExtResource( 1 )

[node name="ZoomHalfButton" type="ToolButton" parent="CanvasLayer"]
margin_left = 678.0
margin_top = 300.0
margin_right = 751.0
margin_bottom = 322.0
text = "Zoom 2X"
icon = ExtResource( 1 )

[node name="FullscreenToggle" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 691.0
margin_top = 519.0
margin_right = 731.0
margin_bottom = 547.0
script = ExtResource( 4 )

[node name="FullscreenButton" type="ToolButton" parent="CanvasLayer"]
margin_left = 449.0
margin_top = 494.0
margin_right = 662.0
margin_bottom = 566.0
text = "TOGGLE FULLSCREEN"
icon = ExtResource( 1 )

[node name="ReturnButton" type="ToolButton" parent="CanvasLayer"]
margin_left = 509.0
margin_top = 605.0
margin_right = 727.0
margin_bottom = 677.0
text = "BACK TO MAIN MENU"
icon = ExtResource( 1 )

[connection signal="pressed" from="CanvasLayer/Zoom1Button" to="CanvasLayer/CurrentZoom" method="_on_Zoom1Button_pressed"]
[connection signal="toggled" from="CanvasLayer/Zoom1Button" to="." method="_on_Zoom1Button_toggled"]
[connection signal="pressed" from="CanvasLayer/ZoomHalfButton" to="CanvasLayer/CurrentZoom" method="_on_ZoomHalfButton_pressed"]
[connection signal="toggled" from="CanvasLayer/ZoomHalfButton" to="." method="_on_ZoomHalfButton_toggled"]
[connection signal="toggled" from="CanvasLayer/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="CanvasLayer/FullscreenButton" to="CanvasLayer/FullscreenToggle" method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="CanvasLayer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
